--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,7 +16,8 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.18.0-rc1
+        stable: 'false'
+        go-version: 1.18-rc1
 
     - name: Build
       env:
