--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
       env:
         GOOS: windows
         GOARCH: amd64
-      run: go build -o auth-server.exe ./dist/ .
+      run: go build -o auth-server.exe .
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.0.0
       with:
