Added Linux Builds

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,12 @@ jobs:
         GOOS: windows
         GOARCH: amd64
       run: go build -o auth-server.exe .
+    - name: Build
+      env:
+        GOOS: linux
+        GOARCH: amd64
+      run: go build -o auth-server .
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.0.0
       with:
-        path: auth-server.exe
+        path: auth-server.*
